# Shologuti-AI

./: README.md
python/: README.md  pyproject.toml
python/shologuti/: __init__.py  adjacency.py  ai.py  cli.py  lobby.py  protocol.py  server.py
python/shologuti/auth/: firebase_auth.py
python/shologuti/client/: __init__.py  app.py  network.py  pygame_app.py  ui.py
python/shologuti/game/: __init__.py  board.py  rules.py
