[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shologuti"
version = "0.1.0"
description = "Python port of the Shologuti 16-piece board game"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Shologuti Team"}]
dependencies = [
  "pillow>=9.0",
  "playsound==1.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.5.0"
]

[tool.hatch.metadata]
allow-direct-references = true


