[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shologuti"
version = "0.1.0"
description = "Pygame implementation of Sixteen - A Game of Tradition"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Sixteen - A Game of Tradition Team"}]
dependencies = [
  "pygame>=2.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.5.0"
]

[tool.hatch.metadata]
allow-direct-references = true


